# agent-plays-balatro

./: .gitignore  FUTURE_CONSIDERATIONS.md  README.md  card_recognition_agent.py  data_structures.py  game_state_agent.py  joker_recognition_agent.py  main.py  pyproject.toml  warp_gameplan.md
examples/: main.py
scripts/: docling_example.py  object_detector_example.py
src/agent_plays_balatro/: models.py
src/agent_plays_balatro/agents/: balatro_action_agent.py  balatro_decision_agent.py  balatro_master_agent.py  card_recognition_agent.py  core_observer_agent.py  game_state_agent.py  joker_recognition_agent.py
src/agent_plays_balatro/config/: README.md
src/agent_plays_balatro/prompts/: README.md
src/agent_plays_balatro/tools/: image_processing_service.py
src/balatro_agent/: main.py
src/balatro_agent/agents/: __init__.py  action_agent.py  basic_agent.py  coordinator_agent.py  game_state_agent.py  memory_agent.py  research_agent.py  strategy_agent.py  web_browser.py
src/balatro_agent/config/: __init__.py
src/balatro_agent/models/: __init__.py  base.py  game_models.py  gemma.py  granite.py  minicpm.py  qwen.py  qwen_vl.py
src/balatro_agent/prompts/: __init__.py
src/balatro_agent/research/: balatro_joker_terms.md  balatro_joker_types.md  balatro_jokers.md  balatro_jokers_modifiers.md  balatro_jokers_rarities.md  balatro_rules.md  balatro_tarot_cards.md
src/balatro_agent/tools/: docling.py  mouse.py  object_detector.py  test_vlm.py  vision_tools.py  vlm_vision_processor.py
