[tool.poetry]
name = "agent-plays-balatro"
version = "0.1.0"
description = "Agents to play the game Balatro."
authors = ["Jules <no-reply@google.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0"
# Add google-adk if/when available on PyPI

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

