[project]
name = "agent-plays_balatro"
version = "0.1.0"
description = "Agents to play the game Balatro."
authors = [
    {name = "Jules", email = "no-reply@google.com"},
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "pydantic^2.0",
    "google-adk==*",
]

[project.optional-dependencies]
dev = [
    "pytest^7.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
backend-path = ["."]
