[project]
name = "agent-plays-balatro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.6.1",
    "autogen-ext[langchain,ollama,openai,web-surfer]>=0.6.1",
    "pip>=25.1.1",
    "playwright>=1.52.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
test = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
